--- a/src/style.css
+++ b/src/style.css
@@ -173,7 +173,7 @@ ol {
   margin-right: var(--spacing-0);
   padding: var(--spacing-0);
   margin-bottom: var(--spacing-8);
-  list-style-position: inside;
+  /* list-style-position: inside;  */
   list-style-image: none;
 }
 
